--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -9,24 +9,23 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="9" />
+    <!--
+     <ScrollView
+         android:id="@+id/scrollView1"
+         android:layout_width="fill_parent"
+         android:layout_height="wrap_content" >
 
-    <ScrollView
-        android:id="@+id/scrollView1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/msg"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:text="text" />
-    </ScrollView>
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="java调用js函数" />
-
+         <TextView
+             android:id="@+id/msg"
+             android:layout_width="fill_parent"
+             android:layout_height="fill_parent"
+             android:text="text" />
+     </Scw>
+     <Button
+         android:id="@+id/button"
+         android:layout_width="fill_parent"
+         android:layout_height="wrap_content"
+         android:layout_weight="1"
+         android:text="java调用js函数" />
+     -->
 </LinearLayout>
